# BlueBerry-Bot

./: BlueBerry_V2.0.py  BlueBerry_V3.0.py  README.md  original_script (1).py  original_script.py
BlueBerry_V4.0/: assignment.py  canvas.py  canvasEvents.py  help.py  main.py  pyproject.toml  tools.py  webserver.py
BlueBerry_V4.0/jsons/: token.json
BlueBerry_V4.0/jsons/users/: 255088131663986699.json  330858527495159815.json  429372995644162059.json  447828550238863392.json  508111184474669056.json  545976182781378561.json  549456138698227712.json  559617963217649694.json  583109440610238474.json  592749690634764337.json  599062766191378453.json  609813441544323083.json  616833585424367616.json  634931468577144852.json  634932057931251718.json  637417833416097797.json  665438630462095360.json  684577591037919234.json  689001179224866825.json  694314391872471141.json  702231709315367023.json  703024284955574273.json  711047036870459423.json  750156079307948052.json  756270712372854875.json  756623899784904835.json  767451480327323685.json  772616319857197077.json  815136914746114099.json  842598722851831839.json  884524924071444530.json  example_user.json
